# niceday-api/controllers/FileSharing.js
@@ -1,0 +1,13 @@
+const utils = require('../utils/writer.jsx');
+const FileSharing = require('../service/FilesSharingService');
+
+module.exports.uploadFile = function uploadFile(req, res, next, body) {
+console.log('ECCOCI');
+  FileSharing.uploadFile(req, body)
+    .then((response) => {
+      utils.writeJson(res, response);
+    })
+    .catch((response) => {
+      utils.writeJson(res, response);
+    });
+};
